made another change

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ConnectDemoApp</title>
+  <title>ConnectDemoApplication</title>
         <link rel="stylesheet" href="./css/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
         <link rel="stylesheet" href="./css/purple.css" type="text/css" media="screen" title="no title" charset="utf-8">
         <script src="./js/purple.js" type="text/javascript" charset="utf-8"></script>
